Made project mobile-friendly and also solved the error

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <h1>Simon Says Game</h1>
-    <h2>Tap anywhere or press any key to start the game</h2>
-
+    <h2>Tap or press any key to start the game</h2>
     <h3 id="highScore">High Score: 0</h3>
 
     <div class="btn-container">
